; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_cmdline.c_check_cancel.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_cmdline.c_check_cancel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cancelled = common dso_local global i64 0, align 8
@SVN_ERR_CANCELLED = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"Caught signal\00", align 1
@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*)* @check_cancel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @check_cancel(i8* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i8*, i8** %3, align 8
  %5 = icmp eq i8* %4, null
  %6 = zext i1 %5 to i32
  %7 = call i32 @SVN_ERR_ASSERT(i32 %6)
  %8 = load i64, i64* @cancelled, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %14

10:                                               ; preds = %1
  %11 = load i32, i32* @SVN_ERR_CANCELLED, align 4
  %12 = call i32 @_(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  %13 = call i32* @svn_error_create(i32 %11, i32* null, i32 %12)
  store i32* %13, i32** %2, align 8
  br label %16

14:                                               ; preds = %1
  %15 = load i32*, i32** @SVN_NO_ERROR, align 8
  store i32* %15, i32** %2, align 8
  br label %16

16:                                               ; preds = %14, %10
  %17 = load i32*, i32** %2, align 8
  ret i32* %17
}

declare dso_local i32 @SVN_ERR_ASSERT(i32) #1

declare dso_local i32* @svn_error_create(i32, i32*, i32) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
